tests/init/neg/cycle-structure.check
-- Error: tests/init/neg/cycle-structure.scala:9:14 --------------------------------------------------------------------
9 |    val x = A(this) // error
  |              ^^^^
  |              Cannot prove that the value is fully initialized. May only use initialized value as arguments.
-- Error: tests/init/neg/cycle-structure.scala:3:14 --------------------------------------------------------------------
3 |    val x = B(this) // error
  |              ^^^^
  |              Cannot prove that the value is fully initialized. May only use initialized value as arguments.
